scenario12/east/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - route:
    - destination:
        host: webserver
        subset: v1
      weight: 30
    - destination:
        host: webserver
        subset: v2
      weight: 70
